@@ -113,12 +113,12 @@ final class DynamicKeyName extends Expression {
                 if (index < 0) {
                     throw new _MiscTemplateException(new Object[] {
                                 "Negative index not allowed: ",
-                                new Integer(index) });
+                                Integer.valueOf(index) });
                 }
                 if (index >= s.length()) {
                     throw new _MiscTemplateException(new Object[] {
-                            "String index out of range: The index was ", new Integer(index),
-                            " (0-based), but the length of the string is only ", new Integer(s.length()) , "." });
+                            "String index out of range: The index was ", Integer.valueOf(index),
+                            " (0-based), but the length of the string is only ", Integer.valueOf(s.length()) , "." });
                 }
                 throw new RuntimeException("Can't explain exception", e);
             }
@@ -179,7 +179,7 @@ final class DynamicKeyName extends Expression {
         final int firstIdx = range.getBegining();
         if (firstIdx < 0) {
             throw new _MiscTemplateException(keyExpression, new Object[] {
-                    "Negative range start index (", new Integer(firstIdx),
+                    "Negative range start index (", Integer.valueOf(firstIdx),
                     ") isn't allowed for a range used for slicing." });
         }
         
@@ -193,9 +193,9 @@ final class DynamicKeyName extends Expression {
         // Right-bounded ranges at this point aren't empty, so the right index surely can't reach targetSize. 
         if (rightAdaptive && step == 1 ? firstIdx > targetSize : firstIdx >= targetSize) {
             throw new _MiscTemplateException(keyExpression, new Object[] {
-                    "Range start index ", new Integer(firstIdx), " is out of bounds, because the sliced ",
+                    "Range start index ", Integer.valueOf(firstIdx), " is out of bounds, because the sliced ",
                     (targetStr != null ? "string" : "sequence"),
-                    " has only ", new Integer(targetSize), " ", (targetStr != null ? "character(s)" : "element(s)"),
+                    " has only ", Integer.valueOf(targetSize), " ", (targetStr != null ? "character(s)" : "element(s)"),
                     ". ", "(Note that indices are 0-based)." });
         }
         
@@ -205,7 +205,7 @@ final class DynamicKeyName extends Expression {
             if (lastIdx < 0) {
                 if (!rightAdaptive) {
                     throw new _MiscTemplateException(keyExpression, new Object[] {
-                            "Negative range end index (", new Integer(lastIdx),
+                            "Negative range end index (", Integer.valueOf(lastIdx),
                             ") isn't allowed for a range used for slicing." });
                 } else {
                     resultSize = firstIdx + 1;
@@ -213,9 +213,9 @@ final class DynamicKeyName extends Expression {
             } else if (lastIdx >= targetSize) {
                 if (!rightAdaptive) {
                     throw new _MiscTemplateException(keyExpression, new Object[] {
-                            "Range end index ", new Integer(lastIdx), " is out of bounds, because the sliced ",
+                            "Range end index ", Integer.valueOf(lastIdx), " is out of bounds, because the sliced ",
                             (targetStr != null ? "string" : "sequence"),
-                            " has only ", new Integer(targetSize), " ", (targetStr != null ? "character(s)" : "element(s)"),
+                            " has only ", Integer.valueOf(targetSize), " ", (targetStr != null ? "character(s)" : "element(s)"),
                             ". (Note that indices are 0-based)." });
                 } else {
                     resultSize = Math.abs(targetSize - firstIdx);
@@ -247,7 +247,7 @@ final class DynamicKeyName extends Expression {
                             keyExpression, new Object[] {
                                 "Decreasing ranges aren't allowed for slicing strings (as it would give reversed "
                                 + "text). The index range was: first = ",
-                                new Integer(firstIdx), ", last = ", new Integer(firstIdx + (resultSize - 1) * step)
+                                Integer.valueOf(firstIdx), ", last = ", Integer.valueOf(firstIdx + (resultSize - 1) * step)
                             });
                 } else {
                     // Emulate the legacy bug, where "foo"[n .. n-1] gives "" instead of an error (if n >= 1).  
