@@ -55,16 +55,16 @@ class SimpleMethod
             if(typesLen - 1 > arguments.size()) {
                 throw new _TemplateModelException(new Object[] {
                         _MethodUtil.invocationErrorMessageStart(member),
-                        " takes at least ", new Integer(typesLen - 1),
+                        " takes at least ", Integer.valueOf(typesLen - 1),
                         typesLen - 1 == 1 ? " argument" : " arguments", ", but ",
-                        new Integer(arguments.size()), " was given." });
+                        Integer.valueOf(arguments.size()), " was given." });
             }
         }
         else if(typesLen != arguments.size()) {
             throw new _TemplateModelException(new Object[] {
                     _MethodUtil.invocationErrorMessageStart(member), 
-                    " takes ", new Integer(typesLen), typesLen == 1 ? " argument" : " arguments", ", but ",
-                    new Integer(arguments.size()), " was given." });
+                    " takes ", Integer.valueOf(typesLen), typesLen == 1 ? " argument" : " arguments", ", but ",
+                    Integer.valueOf(arguments.size()), " was given." });
         }
          
         Object[] args = unwrapArguments(arguments, argTypes, isVarArg, wrapper);
@@ -146,7 +146,7 @@ class SimpleMethod
             int argIdx, TemplateModel argVal, Class targetType) {
         return new _TemplateModelException(new Object[] {
                 _MethodUtil.invocationErrorMessageStart(member), " couldn't be called: Can't convert the ",
-                new _DelayedOrdinal(new Integer(argIdx + 1)),
+                new _DelayedOrdinal(Integer.valueOf(argIdx + 1)),
                 " argument's value to the target Java type, ", ClassUtil.getShortClassName(targetType),
                 ". The type of the actual value was: ", new _DelayedFTLTypeDescription(argVal),
                 });
@@ -155,7 +155,7 @@ class SimpleMethod
     private TemplateModelException createNullToPrimitiveArgumentException(int argIdx, Class targetType) {
         return new _TemplateModelException(new Object[] {
                 _MethodUtil.invocationErrorMessageStart(member), " couldn't be called: The value of the ",
-                new _DelayedOrdinal(new Integer(argIdx + 1)),
+                new _DelayedOrdinal(Integer.valueOf(argIdx + 1)),
                 " argument was null, but the target Java parameter type (", ClassUtil.getShortClassName(targetType),
                 ") is primitive and so can't store null." });
     }
